# Cpp-Calculator

./: .gitignore  CMakeLists.txt  main.cpp
include/: calculator.h
src/: calculator.cpp  main.cpp
